terrain stich works

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -194,6 +194,11 @@
             ]
         },
     },
+    "files.associations": {
+        "algorithm": "cpp",
+        "xiosbase": "cpp",
+        "xlocale": "cpp"
+    },
 
 
 }
