view dist shader

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,9 @@
         "name": "g++.exe - Build and debug active file",
         "type": "cppdbg",
         "request": "launch",
-        "program": "${workspaceFolder}/out/Debug/rpg_debug.exe",
+        "program": "${workspaceFolder}/out/rpg_debug.exe",
         "stopAtEntry": true,
-        "cwd": "${workspaceFolder}",
+        "cwd": "${workspaceFolder}/out",
         "environment": [],
         "externalConsole": true,
         "MIMode": "gdb",
