mesh indexed, grass base color

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,26 +6,27 @@
             "label": "win_build_dbg_gcc",
             "command": "${workspaceFolder}/.vscode/win_build_dbg_gcc.bat",
             "args": [
-                "${workspaceFolder}/out/",                        //build dir
-                "${workspaceFolder}/src",                         //include headers
-                "${workspaceFolder}/out/rpg_debug.exe",           //build name
-                "${workspaceFolder}/src/main.cpp",                //cpp
-                "${workspaceFolder}/ext/lib",                     //libs
+                "${workspaceFolder}/out/",
+                "${workspaceFolder}/src",
+                "${workspaceFolder}/out/rpg_debug.exe",
+                "${workspaceFolder}/src/main.cpp",
+                "${workspaceFolder}/ext/lib"
             ],
             "presentation": {
                 "clear": true
-            }
+            },
+            "problemMatcher": []
         },
         {
             "type": "shell",
             "label": "win_build_dbg_msvc",
             "command": "${workspaceFolder}/.vscode/win_build_dbg_msvc.bat",
             "args": [
-                "${workspaceFolder}/out/",                        //build dir
-                "${workspaceFolder}/src",                         //include headers
-                "${workspaceFolder}/out/rpg_debug.exe",           //build name
-                "${workspaceFolder}/src/main.cpp",                //cpp
-                "${workspaceFolder}/ext/lib",                     //libs
+                "${workspaceFolder}/out/",
+                "${workspaceFolder}/src",
+                "${workspaceFolder}/out/rpg_debug.exe",
+                "${workspaceFolder}/src/main.cpp",
+                "${workspaceFolder}/ext/lib"
             ],
             "presentation": {
                 "clear": true
@@ -36,15 +37,15 @@
             "label": "win_build_opt_gcc",
             "command": "${workspaceFolder}/.vscode/win_build_opt_gcc.bat",
             "args": [
-                "${workspaceFolder}/out/",                        //build dir
-                "${workspaceFolder}/src",                         //include headers
-                "${workspaceFolder}/out/rpg_optimized.exe",       //build name
-                "${workspaceFolder}/src/main.cpp",                //cpp
-                "${workspaceFolder}/ext/lib",                     //libs
+                "${workspaceFolder}/out/",
+                "${workspaceFolder}/src",
+                "${workspaceFolder}/out/rpg_optimized.exe",
+                "${workspaceFolder}/src/main.cpp",
+                "${workspaceFolder}/ext/lib"
             ],
             "presentation": {
                 "clear": true
             }
-        },
+        }
     ]
 }
