new material shaders impl begin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -257,7 +257,8 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "*.rh": "cpp"
     },
 
 
